updated corrections, removed nc modal, and adjusted visuals of scrollbar

--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -146,7 +146,7 @@ article img {
   border-top: 3px solid black;
   border-bottom: 3px solid black;
   font: bold;
-
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
   padding: 20px;
   margin-top: 50px;
   display: flex;
@@ -323,6 +323,14 @@ article img {
   margin: 20px auto;
   padding: 6px;
   font-family: 'newsreader', serif;
+  box-shadow: 0px 0px 10px 5px rgba(76, 69, 38, 0.5);
+}
+
+.video {
+  width: fit-content;
+
+  margin: 0;
+  padding: 0px;
 }
 
 .container article {
@@ -1235,10 +1243,13 @@ h4 {
 }
 
 .lowLight {
-  background-color: rgba(74, 66, 38, 0.212);
   padding: 3px;
   border-radius: 3px;
-  font-style: italic;
+}
+
+.lowLight:hover {
+  background-color: rgba(23, 21, 13, 0.469);
+  color: white;
 }
 
 .stripe li:hover {
@@ -1522,14 +1533,16 @@ h4 {
 }
 
 .border1 {
-  border: 1px solid black;
+  border: 1px solid rgb(119, 19, 19);
+  padding: 10px;
+  background-color: rgb(248, 249, 240);
 }
 
 .toolCard ul {
   list-style-type: none;
   margin: auto;
   min-height: 200px;
-  width: 90%;
+  width: 100%;
 }
 
 .toolCard li {
@@ -2191,12 +2204,39 @@ h4 {
     min-width: 100%;
   }
 
+  .toolCard {
+    text-wrap: wrap;
+  }
+
+  .toolCard p {
+    width: 80%;
+    margin: auto;
+    padding: 10px;
+  }
+
+  .toolCard p {
+    font-size: 18px;
+  }
+
+  .border1 li {
+    font-size: 18px !important;
+  }
+
+  .video {
+    width: auto;
+    max-height: 250px;
+  }
+
   .tray {
     display: none;
   }
 
   .icon {
     font-size: 50px;
+  }
+
+  .border1 {
+    width: 100%;
   }
 
   .starter {
